[gd_scene load_steps=15 format=3 uid="uid://bd3ctvg0j1bvw"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7g41f"]
[ext_resource type="Texture2D" uid="uid://bjoxv2ipw578j" path="res://textures/PavingStones/PavingStones142_1K-PNG_Color.png" id="1_narlx"]
[ext_resource type="Texture2D" uid="uid://de8hbsi8cn0dn" path="res://textures/PavingStones/PavingStones142_1K-PNG_AmbientOcclusion.png" id="2_6oqo2"]
[ext_resource type="Texture2D" uid="uid://c3632dfcio6iu" path="res://textures/PavingStones/PavingStones142_1K-PNG_NormalGL.png" id="2_sehpd"]
[ext_resource type="Texture2D" uid="uid://bp8hn68q6vylg" path="res://textures/PavingStones/PavingStones142_1K-PNG_Roughness.png" id="3_ou8la"]
[ext_resource type="Script" path="res://scripts/Interactable.gd" id="5_21tw2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_43kfi"]
size = Vector3(1000, 0.1, 1000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iuv5v"]
albedo_texture = ExtResource("1_narlx")
metallic_specular = 0.01
roughness_texture = ExtResource("3_ou8la")
normal_enabled = true
normal_texture = ExtResource("2_sehpd")
ao_enabled = true
ao_texture = ExtResource("2_6oqo2")
uv1_scale = Vector3(1000, 1000, 1000)

[sub_resource type="BoxMesh" id="BoxMesh_wuavy"]
material = SubResource("StandardMaterial3D_iuv5v")
size = Vector3(1000, 0.1, 1000)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wt4ky"]
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mu4ev"]
radius = 0.2
height = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ixanp"]
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_th1a7"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2yyhs"]

[node name="TestScene" type="Node3D"]

[node name="TestFloor" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="TestFloor"]
shape = SubResource("BoxShape3D_43kfi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TestFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0628471, -0.259606, 0.175844)
mesh = SubResource("BoxMesh_wuavy")

[node name="PlayerStart" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="TestLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.839298, -0.0251548, 0.54309, -0.164203, 0.94055, 0.297325, -0.518283, -0.338722, 0.785271, 0.908732, 2.71083, 0.809486)
light_energy = 3.185
light_volumetric_fog_energy = 1.35

[node name="Player" type="CharacterBody3D" parent="."]
collision_mask = 5
script = ExtResource("1_7g41f")
slide_speed_multiplier = 50.0
slide_duration = 1.0

[node name="PlayerCollision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_wt4ky")

[node name="PlayerCamera" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
current = true

[node name="InteractionRay" type="RayCast3D" parent="Player/PlayerCamera"]
target_position = Vector3(0, 0, -3)
collision_mask = 7

[node name="HoldPosition" type="Node3D" parent="Player/PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="TestObject" type="RigidBody3D" parent="."]
transform = Transform3D(0.947546, 0, -0.319621, 0, 1, 0, 0.319621, 0, 0.947546, 0.162844, 1, -2.579)
collision_layer = 2
collision_mask = 6
script = ExtResource("5_21tw2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TestObject"]
shape = SubResource("CapsuleShape3D_mu4ev")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TestObject"]
mesh = SubResource("CapsuleMesh_ixanp")

[node name="Ghost" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.67972, 1.09526, -6.1568)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ghost"]
shape = SubResource("CapsuleShape3D_th1a7")

[node name="Area3D" type="Area3D" parent="Ghost"]

[node name="PathFollow3D" type="PathFollow3D" parent="Ghost"]

[node name="Camera3D" type="Camera3D" parent="Ghost"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Ghost"]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Ghost"]

[node name="FogVolume" type="FogVolume" parent="Ghost"]

[node name="RayCast3D" type="RayCast3D" parent="Ghost"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ghost"]
mesh = SubResource("CapsuleMesh_2yyhs")
